--- a/css/style.css
+++ b/css/style.css
@@ -959,10 +959,10 @@ hamburger
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 5vh 0; }
+    padding: 5vh 5vw; }
     #footer .footer form {
       background-color: #29323c;
-      width: 90%;
+      width: 100%;
       height: auto;
       display: flex;
       flex-direction: column;
@@ -1051,6 +1051,46 @@ hamburger
           height: 100%;
           border-radius: 10px;
           box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a; }
+    #footer .footer .socialMedia-links {
+      grid-template-columns: 1fr;
+      background-color: #29323c;
+      border: 1px solid white;
+      width: 100%;
+      margin: 2em 5vw;
+      padding: .5em; }
+      @media (min-width: 768px) {
+        #footer .footer .socialMedia-links {
+          width: 50%;
+          display: grid;
+          grid-template-columns: 1fr 1fr; } }
+      #footer .footer .socialMedia-links .socialMedia-item {
+        border: 1px solid rgba(0, 0, 0, 0.226);
+        padding: .5em 0; }
+        #footer .footer .socialMedia-links .socialMedia-item a {
+          background: #485563;
+          display: block;
+          padding: .3em .5em;
+          width: 60%;
+          margin: 0 auto;
+          color: #fff;
+          border-radius: 5px;
+          position: relative;
+          transition: .2s ease; }
+          #footer .footer .socialMedia-links .socialMedia-item a::after {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 5px;
+            box-shadow: inset 2px 2px 4px #fffa, inset -2px -2px 4px #000a; }
+          #footer .footer .socialMedia-links .socialMedia-item a i {
+            color: #fff;
+            margin-right: 1em;
+            padding: .5em; }
+          #footer .footer .socialMedia-links .socialMedia-item a:active {
+            transform: scale(0.97); }
     #footer .footer .brand {
       width: 80%;
       padding: .3em .5em;
