--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -155,6 +155,16 @@
                 padding: .5em 0;
                 overflow: hidden;
                 margin: .1em;
+                position: relative;
+
+                .link-icon {
+                    color: #ddda;
+                    position:absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    transition: .2s ease;
+                }
 
                 a {
                     background: $overlay-blue-dark;
@@ -213,7 +223,10 @@
                     a {
                         background: $overlay-blue-light;
                         transform: translateX(0);
+                    }
 
+                    .link-icon {
+                        opacity: 0;
                     }
                 }
                 // end of link item hover state
