--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -35,6 +35,7 @@ $background-light: #fff;
 
 $overlay: linear-gradient(60deg, #29323c 0%, #485563 100%);
 $overlay-blue-dark:#29323c;
+$overlay-blue-darker:#20262e;
 $overlay-blue-light: #485563;
 $nav-background: #29323c;
 $nav-active-background: #1b2127;
