--- a/css/style.css
+++ b/css/style.css
@@ -1069,7 +1069,8 @@ hamburger
         padding: .5em 0;
         overflow: hidden;
         margin: .1em;
-        position: relative; }
+        position: relative;
+        transition: .3s; }
         #footer .footer .socialMedia-links .socialMedia-item .link-icon {
           color: #ddda;
           position: absolute;
@@ -1121,15 +1122,17 @@ hamburger
             padding: .5em; }
           #footer .footer .socialMedia-links .socialMedia-item a:active {
             transform: scale(0.97); }
-        #footer .footer .socialMedia-links .socialMedia-item:hover a {
-          background: #485563;
-          transform: translateX(0); }
-        #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon {
-          opacity: 0; }
-          #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon::before {
+        #footer .footer .socialMedia-links .socialMedia-item:hover {
+          background-color: #20262e; }
+          #footer .footer .socialMedia-links .socialMedia-item:hover a {
+            background: #485563;
+            transform: translateX(0); }
+          #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon {
             opacity: 0; }
-          #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon::after {
-            opacity: 1; }
+            #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon::before {
+              opacity: 0; }
+            #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon::after {
+              opacity: 1; }
     #footer .footer .brand {
       width: 80%;
       padding: .3em .5em;
