--- a/css/style.css
+++ b/css/style.css
@@ -969,6 +969,7 @@ hamburger
       margin: 5vh auto;
       padding: 5vh 1em;
       border-radius: 5px;
+      border: 1px solid #fffa;
       font-family: "Ubuntu", sans-serif; }
       @media (min-width: 1024px) {
         #footer .footer form {
@@ -1054,7 +1055,7 @@ hamburger
     #footer .footer .socialMedia-links {
       grid-template-columns: 1fr;
       background-color: #29323c;
-      border: 1px solid #fff;
+      border: 1px solid #fffa;
       border-radius: 5px;
       width: 100%;
       margin: 2em 5vw;
@@ -1072,21 +1073,13 @@ hamburger
         position: relative;
         transition: .3s; }
         #footer .footer .socialMedia-links .socialMedia-item .link-icon {
-          color: #ddda;
+          font-size: 1.5em;
+          color: #fff;
           position: absolute;
           left: 50%;
           top: 50%;
           transform: translate(-50%, -50%);
           transition: 1s ease; }
-          #footer .footer .socialMedia-links .socialMedia-item .link-icon::before, #footer .footer .socialMedia-links .socialMedia-item .link-icon::after {
-            position: absolute;
-            font-family: 'Font Awesome 5 Free';
-            transition: .5s ease; }
-          #footer .footer .socialMedia-links .socialMedia-item .link-icon::before {
-            content: '\f0a8'; }
-          #footer .footer .socialMedia-links .socialMedia-item .link-icon::after {
-            content: '\f0a9';
-            opacity: 0; }
         #footer .footer .socialMedia-links .socialMedia-item a {
           background: #29323c;
           display: block;
@@ -1117,9 +1110,10 @@ hamburger
             border-radius: 5px;
             box-shadow: inset 2px 2px 4px #fffa, inset -2px -2px 4px #000a; }
           #footer .footer .socialMedia-links .socialMedia-item a i {
-            color: #fff;
+            color: #fffa;
             margin-right: 1.5em;
-            padding: .5em; }
+            padding: .5em;
+            transition: .5s; }
           #footer .footer .socialMedia-links .socialMedia-item a:active {
             transform: scale(0.97); }
         #footer .footer .socialMedia-links .socialMedia-item:hover {
@@ -1127,12 +1121,10 @@ hamburger
           #footer .footer .socialMedia-links .socialMedia-item:hover a {
             background: #485563;
             transform: translateX(0); }
+            #footer .footer .socialMedia-links .socialMedia-item:hover a i {
+              color: #fff; }
           #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon {
             opacity: 0; }
-            #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon::before {
-              opacity: 0; }
-            #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon::after {
-              opacity: 1; }
     #footer .footer .brand {
       width: 80%;
       padding: .3em .5em;
