--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -23,6 +23,7 @@
             margin: 5vh auto;
             padding: 5vh 1em;
             border-radius: 5px;
+            border: 1px solid #fffa;
             font-family: $font-ubuntu;
 
             h1 {
@@ -145,7 +146,7 @@
             }
             grid-template-columns: 1fr;
             background-color: $overlay-blue-dark;
-            border: 1px solid #fff;
+            border: 1px solid #fffa;
             border-radius: 5px;
             width: 100%;
             margin: 2em 5vw;
@@ -160,26 +161,27 @@
                 transition: .3s;
 
                 .link-icon {
-                    color: #ddda;
+                    font-size: 1.5em;
+                    color: #fff;
                     position:absolute;
                     left: 50%;
                     top: 50%;
                     transform: translate(-50%, -50%);
                     transition: 1s ease;
-                    &::before,
-                    &::after {
-                        position: absolute;
-                        font-family: 'Font Awesome 5 Free';
-                        transition: .5s ease;
-                    }
+                    // &::before,
+                    // &::after {
+                    //     position: absolute;
+                    //     font-family: 'Font Awesome 5 Free';
+                    //     transition: .5s ease;
+                    // }
 
-                    &::before {
-                        content: '\f0a8';
-                    }
-                    &::after {
-                        content: '\f0a9';
-                        opacity: 0;
-                    }
+                    // &::before {
+                    //     content: '\f0a8';
+                    // }
+                    // &::after {
+                    //     content: '\f0a9';
+                    //     opacity: 0;
+                    // }
                 }
 
                 a {
@@ -222,9 +224,10 @@
                     // end of link box shadow
                     
                     i {
-                        color: #fff;
+                        color: #fffa;
                         margin-right: 1.5em;
                         padding: .5em;
+                        transition: .5s;
                     }
 
                     // active state
@@ -241,16 +244,20 @@
                     a {
                         background: $overlay-blue-light;
                         transform: translateX(0);
+
+                        i {
+                            color: #fff;
+                        }
                     }
 
                     .link-icon {
                         opacity: 0;
-                        &::before {
-                            opacity: 0;
-                        }
-                        &::after {
-                            opacity: 1;
-                        }
+                        // &::before {
+                        //     opacity: 0;
+                        // }
+                        // &::after {
+                        //     opacity: 1;
+                        // }
                     }
                 }
                 // end of link item hover state
