--- a/css/style.css
+++ b/css/style.css
@@ -1083,10 +1083,12 @@ hamburger
         #footer .footer .socialMedia-links .socialMedia-item a {
           background: #29323c;
           display: block;
+          text-align: center;
           padding: .3em .5em .3em;
           width: 75%;
           margin: 0 auto;
           color: #fff;
+          opacity: 0;
           border-radius: 5px;
           position: relative;
           transition: .2s ease;
@@ -1111,7 +1113,6 @@ hamburger
             box-shadow: inset 2px 2px 4px #fffa, inset -2px -2px 4px #000a; }
           #footer .footer .socialMedia-links .socialMedia-item a i {
             color: #fffa;
-            margin-right: 1.5em;
             padding: .5em;
             transition: .5s; }
           #footer .footer .socialMedia-links .socialMedia-item a:active {
@@ -1120,11 +1121,21 @@ hamburger
           background-color: #20262e; }
           #footer .footer .socialMedia-links .socialMedia-item:hover a {
             background: #485563;
-            transform: translateX(0); }
+            transform: translateX(0);
+            opacity: 1; }
             #footer .footer .socialMedia-links .socialMedia-item:hover a i {
               color: #fff; }
           #footer .footer .socialMedia-links .socialMedia-item:hover .link-icon {
             opacity: 0; }
+        #footer .footer .socialMedia-links .socialMedia-item.linkedin a {
+          background: blue; }
+        #footer .footer .socialMedia-links .socialMedia-item.linkedin p {
+          color: #fff; }
+        #footer .footer .socialMedia-links .socialMedia-item.github i {
+          color: yellow;
+          margin-right: .5em; }
+        #footer .footer .socialMedia-links .socialMedia-item.github p {
+          color: yellow; }
     #footer .footer .brand {
       width: 80%;
       padding: .3em .5em;
