--- a/scss/style.scss
+++ b/scss/style.scss
@@ -582,24 +582,25 @@ body {
     text-align: center;
     margin: 0 auto;
     padding: 50px 10px 100px 10px;
-    background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    position: relative;
+    background-color: $overlay-blue-light;
+    // background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-position: center;
+    // background-attachment: fixed;
+    // position: relative;
     // about container overlay
-    &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        height: 100%;
-        width: 100%;
-        background-color: #000;
-        opacity: 0.6;
-        overflow: hidden;
-    }
+    // &::after {
+    //     content: "";
+    //     position: absolute;
+    //     left: 0;
+    //     top: 0;
+    //     height: 100%;
+    //     width: 100%;
+    //     background-color: #000;
+    //     opacity: 0.6;
+    //     overflow: hidden;
+    // }
     // about container overlay
     // end of about container
     // col-right
