--- a/css/style.css
+++ b/css/style.css
@@ -878,33 +878,6 @@ hamburger
           transition: 0.5s ease;
           z-index: 1;
           overflow: hidden; }
-        #projects .projects .all-projects .project-item .project-img .project-img-desc {
-          z-index: 2;
-          position: absolute;
-          display: grid;
-          place-items: center;
-          height: 100%;
-          width: 100%;
-          top: 0;
-          left: 0;
-          color: #fff;
-          border: none;
-          outline: none;
-          overflow: hidden;
-          font-size: 1.4em;
-          opacity: .1;
-          background-color: #29323c;
-          transition: .5s ease; }
-          #projects .projects .all-projects .project-item .project-img .project-img-desc ul {
-            list-style: none; }
-            #projects .projects .all-projects .project-item .project-img .project-img-desc ul li {
-              padding: .5em 0;
-              text-transform: capitalize;
-              transform: translateX(-2em);
-              opacity: 0; }
-          @media (max-width: 768px) {
-            #projects .projects .all-projects .project-item .project-img .project-img-desc {
-              font-size: 1em; } }
         #projects .projects .all-projects .project-item .project-img:hover {
           transition: 0.5s ease; }
           #projects .projects .all-projects .project-item .project-img:hover::after {
@@ -934,16 +907,9 @@ hamburger
       #projects .projects .all-projects .project-item:hover.project-item::after {
         opacity: 1; }
       #projects .projects .all-projects .project-item:hover.project-item .project-img img {
-        transform: scale(1.1);
-        transform-origin: left; }
+        transform: scale(1.1); }
       #projects .projects .all-projects .project-item:hover.project-item .project-img::after {
-        opacity: 0; }
-      #projects .projects .all-projects .project-item:hover.project-item .project-img .project-img-desc {
-        opacity: .9; }
-        #projects .projects .all-projects .project-item:hover.project-item .project-img .project-img-desc ul li {
-          transition: .3s;
-          opacity: 1;
-          transform: translateX(0); }
+        opacity: .7; }
       #projects .projects .all-projects .project-item:hover.project-item .project-tile a i {
         transform: scale(1.15) translateX(0.5em); }
         #projects .projects .all-projects .project-item:hover.project-item .project-tile a i::after {
