--- a/scss/style.scss
+++ b/scss/style.scss
@@ -583,25 +583,7 @@ body {
     margin: 0 auto;
     padding: 50px 10px 100px 10px;
     background-color: $overlay-blue-light;
-    // background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // background-position: center;
-    // background-attachment: fixed;
-    // position: relative;
-    // about container overlay
-    // &::after {
-    //     content: "";
-    //     position: absolute;
-    //     left: 0;
-    //     top: 0;
-    //     height: 100%;
-    //     width: 100%;
-    //     background-color: #000;
-    //     opacity: 0.6;
-    //     overflow: hidden;
-    // }
-    // about container overlay
+    
     // end of about container
     // col-right
     .col-right {
@@ -609,7 +591,7 @@ body {
         .section-title {
             text-align: center;
             font-size: 2.35em;
-            padding-bottom: 10px;
+            // padding-bottom: 10px;
             &::after {
                 width: 80%;
                 margin: 0 auto;
@@ -715,11 +697,12 @@ body {
         
         // article
         article {
+            // border: 1px solid red;
             &.custom-scrollbar-js {
                 height: 200px;
-                margin-bottom: .5em;
                 cursor: pointer;
-                padding: .5em;
+                margin-bottom: .5em;
+                // padding: 0 .5em;
             }
             // links
             &#cv {
@@ -786,9 +769,10 @@ body {
                 margin-bottom: 20px;
                 text-overflow: ellipsis;
                 text-align: left;
-                padding-left: 4px;
+                padding-left: 1em;
                 z-index: 13;
                 font-size: .8em;
+                
                 @media (min-width:768px){
                     font-size: 1em;
                 }
