--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -106,10 +106,11 @@
                         }
                         color: #ddd;
                         font-weight: 900;
+                        text-transform: capitalize;
                         line-height: 1em;
                         letter-spacing: .05em;
-                        padding-bottom: 10px;
-                        text-transform: capitalize;
+                        margin-bottom: .5em;
+                        padding-bottom: .5em;
                         border-bottom: 1px dashed $text-white-trans;
                         
                     }
@@ -119,7 +120,7 @@
                         font-size: .9em;
                         line-height: 1.3;
                         font-weight: 500;
-                        margin: .5em 0;
+                        margin: .8em 0;
                         text-transform: capitalize;
                         color: $text-white-e;
                         transition: .3s;
@@ -142,7 +143,7 @@
                     a {
                         color: $text-white;
                         background: $background-dark;
-                        margin: .4em 0;
+                        margin: .5em 0;
                         padding: .5em;
                         border: none;
                         outline: none;
@@ -276,7 +277,7 @@
                         flex-wrap: wrap;
 
                         li {
-                            font-size: .7em;
+                            font-size: .95em;
                             color: $text-white-trans;
                             list-style: none;
                             padding: .4em .3em;
